# pVsNp

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-07-pvsnp-workbench.md
docs/superpowers/specs/: 2026-04-07-pvsnp-workbench-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: CodeEditor.tsx  GraphViewer.tsx  ResultsTable.tsx  ScalingChart.tsx
frontend/src/pages/: Arena.tsx  ComplexityFinder.tsx  Counterexamples.tsx  Instances.tsx  Profiler.tsx
frontend/src/theme/: retro.css
pvsnp/: __main__.py  config.py  db.py  server.py  worker.py
pvsnp/algorithms/: brute_force.py  christofides.py  nearest_neighbor.py  two_opt.py
pvsnp/api/: __init__.py  algorithms.py  benchmarks.py  complexity.py  counterexamples.py  instances.py  profiler.py  status.py  ws.py
pvsnp/engine/: counterexample.py  curve_fitter.py  generator.py  input_generators.py  loader.py  verifier.py
pvsnp/models/: schemas.py
tests/: test_algorithms.py  test_api_algorithms.py  test_api_benchmarks.py  test_api_instances.py  test_api_remaining.py  test_counterexample.py  test_curve_fitter.py  test_db.py  test_generator.py  test_input_generators.py  test_loader.py  test_verifier.py  test_worker.py  test_ws.py
